fix: multiline handling